edited html source code;

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,8 +25,8 @@
         <th scope="col">Цена</th>
         <th scope="col">Промо цена</th>
         <th scope="col">Цвет</th>
-        <th scope="col">Изменить</th>
-        <th scope="col">Удалить</th>
+        <th scope="col">Статус</th>
+        <th scope="col">Перейти</th>
     </tr>
     </thead>
     <tr>
